--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
   </head>
   <body>
     <h1>Custom Markup</h1>
     <subheading>An Easier Way To Use HTML</subheading>
     <div class="howTo">
-      
+      <h2>How To Use</h2>
     </div>
   </body>
 </html>
