--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <h1>Custom Markup</h1>
     <subheading>An Easier Way To Use HTML</subheading>
     <div class="howTo">
-      <h2>How To Use</h2>
+      <div class="hContent">
+        <h2>How To Use</h2>
+      </div>
     </div>
   </body>
 </html>
