--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <link rel="stylesheet" type="text/css" href="dist/main.css">
   </head>
   <body>
-    <h1>Custom Markup</h1>
-    <subheading>An Easier Way To Use HTML</subheading>
+    <div class="title">
+      <h1>Custom Markup</h1>
+      <subheading>An Easier Way To Use HTML</subheading>
+    </div>
     <div class="howTo">
       <div class="hContent">
         <h2>How To Use</h2>
+        <p>The first thing that you need to do is to link it in the head tag like so:</p>
+        <code>Link will go here</code>
+        <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
       </div>
     </div>
   </body>
