--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         <p>The first thing that you need to do is to link it in the head tag like so:</p>
         <code>Link will go here</code>
         <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
+        <ul>
+          <li><code>&lt;c-r&gt;</code></li>
+          <li><code>&lt;c-g&gt;</code></li>
+          <li><code>&lt;c-b&gt;</code></li>
+          <li><code>&lt;c-o&gt;</code></li>
+          <li><code>&lt;c-y&gt;</code></li>
+          <li><code>&lt;c-i&gt;</code></li>
+          <li><code>&lt;c-v&gt;</code></li>
+          <li><code>&lt;bg-r&gt;</code></li>
+          <li><code>&lt;bg-g&gt;</code></li>
+          <li><code>&lt;bg-b&gt;</code></li>
+          <li><code>&lt;bg-o&gt;</code></li>
+          <li><code>&lt;bg-y&gt;</code></li>
+          <li><code>&lt;bg-i&gt;</code></li>
+          <li><code>&lt;bg-v&gt;</code></li>
+          <li><code>&lt;awesome&gt;</code></li>
+          <li><code>&lt;cool&gt;</code></li>
+          <li><code>&lt;nice&gt;</code></li>
+        </ul>
       </div>
     </div>
   </body>
