--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>The first thing that you need to do is to link it in the head tag like so:</p>
         <code>Link will go here</code>
         <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
-        <ul>
+        <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
           <li><code>&lt;c-g&gt;</code></li>
           <li><code>&lt;c-b&gt;</code></li>
@@ -36,5 +36,8 @@
         </ul>
       </div>
     </div>
+    <footer>
+      
+    </footer>
   </body>
 </html>
