--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <div class="title">
       <h1>Custom Markup</h1>
       <subheading>An Easier Way To Use HTML</subheading>
+      <a href="#hContent" class="btn">Show Me!</a>
     </div>
     <div class="howTo">
-      <div class="hContent">
+      <div class="hContent" id="hContent">
         <h2>How To Use</h2>
         <p>The first thing that you need to do is to link it in the head tag like so:</p>
         <code>Link will go here</code>
         <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
-        <ul style="font-size:20px;">
+        <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
           <li><code>&lt;c-g&gt;</code></li>
           <li><code>&lt;c-b&gt;</code></li>
