--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="title">
       <h1>Custom Markup</h1>
-      <subheading>An Easier Way To Use HTML</subheading>
+      <subheading>An Easier Way To Use HTML</subheading><br><br><br>
       <a href="#hContent" class="btn">Show Me!</a>
     </div>
     <div class="howTo">
