--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="hContent" id="hContent">
         <h2>How To Use</h2>
         <p>The first thing that you need to do is to link it in the head tag like so:</p>
-        <code>Link will go here</code>
+        <code>&lt;link rel="stylesheet" type="text/css" href="talonbragg.github.io/Custom-Markup/dist/main.css"&gt;</code>
         <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
         <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
