--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>How To Use</h2>
         <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
         <code>&lt;link rel="stylesheet" type="text/css" href="talonbragg.github.io/Custom-Markup/dist/main.css"&gt;</code>
-        <p>Just experiment by using the tags in the list below. Just put and text as a child in the tag.</p>
+        <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p>
         <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
           <li><code>&lt;c-g&gt;</code></li>
@@ -37,6 +37,14 @@
           <li><code>&lt;cool&gt;</code></li>
           <li><code>&lt;nice&gt;</code></li>
         </ul>
+        <div>
+          <h1>Examples</h1>
+          <c-r>Hi</c-r>
+          <bg-r>Hello</bg-r>
+          <awesome>Awesome</awesome>
+          <cool>cool</cool>
+          <nice>nice</nice>
+        </div>
       </div>
     </div>
     <footer>
