--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         </ul>
         <div>
           <h1>Examples</h1>
-          <c-r>Hi</c-r>
-          <bg-r>Hello</bg-r>
-          <awesome>Awesome</awesome>
-          <cool>cool</cool>
-          <nice>nice</nice>
+          <c-r>Hi</c-r><br>
+          <bg-r>Hello</bg-r><br>
+          <awesome>Awesome</awesome><br>
+          <cool>cool</cool><br>
+          <nice>nice</nice><br>
         </div>
       </div>
     </div>
