--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <cool>cool</cool><br>
           <nice>nice</nice><br>
         </div>
+        <h1>More Coming Soon!</h1>
       </div>
     </div>
     <footer>
