--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <nice>nice</nice><br>
         </div>
       </div>
-    <h1>More Coming Soon!</h1>
+    <hr width="50%"><br><br><h1>More Coming Soon!</h1>
     </div>
     <footer>
       
