--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
-  <body style="font-family:Inconsolata;color:#f5f5f5;background-color:black;">
-    <h1>404 - Um, Ur Lost</h1>
-    <h2>Click the Compass To Find Your Way Home</h2>
-    <a>
-      <img src="https://custommarkup.ml/css/assets/Compass-redpass-art-clipart-image.gif"
+  <body style="font-family:Inconsolata;color:#f5f5f5;background-color:black;text-align:Center;">
+    <h1 style="font-size:80px;">404 - Um, Ur Lost</h1>
+    <h2 style="font-size:50px;">Click the Compass To Find Your Way Home</h2>
+    <a href="http://custommarkup.ml">
+      <img src="https://custommarkup.ml/css/assets/Compass-redpass-art-clipart-image.gif">
     </a>
   </body>
 </html>
