--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-85056275-7', 'auto');
     ga('send', 'pageview');
     </script>
+    <script type="text/javascript">$crisp=[];CRISP_WEBSITE_ID="122e6313-140f-4d9e-8f98-55773d7ec705";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
 </html>
