--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <li><code>&lt;awesome&gt;</code></li>
           <li><code>&lt;cool&gt;</code></li>
           <li><code>&lt;nice&gt;</code></li>
+          <li><code>&lt;insane&gt;</code></li>
+          <li><code>&lt;beautiful&gt;</code></li>
+          <li><code>&lt;old&gt;</code></li>
         </ul>
         <div>
           <h1>Examples</h1>
