--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Custom Markup</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="A simple HTML framework to make your day easier.">
+    <meta name="keywords" content="custom markup, Custom Markup, Custom, Markup, HTML, framework, html framework">
+    <meta name="author" content="Talon Bragg">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
     <link rel="stylesheet" type="text/css" href="dist/main.min.css">
