--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <nice>nice</nice><br>
         </div>
       </div>
-    <hr width="50%"><br><br><h1>More Coming Soon!</h1>
+    <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
     </div>
     <footer>
       
