--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
     </div>
+    <div class="box"></div>
     <footer>
       
     </footer>
