--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <awesome>Awesome</awesome><br>
           <cool>cool</cool><br>
           <nice>nice</nice><br>
-          <insane>INSANE</insane>
-          <beautiful>beautiful</beautiful>
-          <old>old</old>
+          <insane>INSANE</insane><br>
+          <beautiful>beautiful</beautiful><br>
+          <old>old</old><br>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
