--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </ul>
         <div>
           <h1>Examples</h1>
+          <hr width="50%" height="15px" align="left">
           <c-r>Hi</c-r><br>
           <bg-r>Hello</bg-r><br>
           <awesome>Awesome</awesome><br>
