--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><code>&lt;insane&gt;</code></li>
           <li><code>&lt;beautiful&gt;</code></li>
           <li><code>&lt;old&gt;</code></li>
+          <li><code>&lt;container&gt;</code></li>
         </ul>
         <div>
           <h1>Examples</h1>
