--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="smoothscroll.js"></script>
   </head>
   <body>
+    <div id="social">
+      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
+    </div>
     <div class="title">
       <h1>Custom Markup</h1>
       <subheading>An Easier Way To Use HTML</subheading><br><br><br>
@@ -62,11 +66,7 @@
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
-    </div>
-    <div id="social">
-      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
-    </div>
+    </div>
     <footer>
       
     </footer>
