--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
-    </div>
+    </div>
     <footer>
       
     </footer>
@@ -79,5 +79,7 @@
     ga('send', 'pageview');
     </script>
     <script type="text/javascript">$crisp=[];CRISP_WEBSITE_ID="122e6313-140f-4d9e-8f98-55773d7ec705";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  ` <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
