--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
     </script>
     <script type="text/javascript">$crisp=[];CRISP_WEBSITE_ID="122e6313-140f-4d9e-8f98-55773d7ec705";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="copythat.js"></script>
   </body>
 </html>
