--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="hContent" id="hContent">
         <h2>How To Use</h2>
         <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
+        <p>Click it to copy it to your clipboard.</p>
         <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
         <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
         <p>Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
