--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li><code>&lt;beautiful&gt;</code></li>
           <li><code>&lt;old&gt;</code></li>
           <li><code>&lt;container&gt;</code></li>
+          <li><code>&lt;ghl-s&gt;</code></li>
         </ul>
         <div>
           <h1>Examples</h1>
@@ -64,6 +65,7 @@
           <beautiful>beautiful</beautiful><br>
           <old>old</old><br>
           <container>container</container>
+          <a><ghl-s>github link style</ghl-s></a>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
