--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <insane>INSANE</insane><br>
           <beautiful>beautiful</beautiful><br>
           <old>old</old><br>
-          <container>container</container>
-          <a><ghl-s>github link style</ghl-s></a>
+          <container>container</container><br>
+          <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
