--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
     </div>
     <div class="title">
-      <h1>Custom Markup</h1>
+      <h1 style="color: white;">Custom Markup</h1>
       <subheading>An Easier Way To Use HTML</subheading><br><br><br>
       <a href="#hContent" class="btn">Show Me!</a>
     </div>
