--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Click it to copy it to your clipboard.</p>
         <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
         <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
-        <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <bold>756</bold> bytes minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
+        <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>756</b> bytes minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
         <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
           <li><code>&lt;c-g&gt;</code></li>
@@ -48,7 +48,7 @@
           <li><code>&lt;cool&gt;</code></li>
           <li><code>&lt;nice&gt;</code></li>
           <li><code>&lt;insane&gt;</code></li>
-          <li><code>&lt;beautiful&gt;</code></li>
+          <li><code>&lt;beautiful&gt;</code></li>a
           <li><code>&lt;old&gt;</code></li>
           <li><code>&lt;container&gt;</code></li>
           <li><code>&lt;ghl-s&gt;</code></li>
