--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <p>Click it to copy it to your clipboard.</p>
         <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
         <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
-        <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>756</b> bytes minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
+        <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. It even makes it easier to style forms. This is only <b>1.7 KB</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
+        <p>Courtesy to <a href="https://getskeleton.com">Skeleton CSS</a> for the form styling.</p>
         <ul style="font-size:20px;">
           <li><code>&lt;c-r&gt;</code></li>
           <li><code>&lt;c-g&gt;</code></li>
