--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
           <li><code>&lt;ghl-s&gt;</code></li>
         </ul>
         <div>
+          <h1>Classes For Tags</h1>
+          <ul>
+            <li><code>.sm</code></li>
+            <li><code>.med</code></li>
+            <li><code>.bg</code></li>
+          </ul>
+        </div>
+        <div>
           <h1>Examples</h1>
           <hr width="50%" height="15px" align="left">
           <c-r>Hi</c-r><br>
