--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           <old>old</old><br>
           <container>container</container><br>
           <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a>
+          <div class="sm">.sm</div>
+          <div class="med">.med</div>
+          <div class="bg">.bg</div>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
