--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><code>&lt;cool&gt;</code></li>
           <li><code>&lt;nice&gt;</code></li>
           <li><code>&lt;insane&gt;</code></li>
-          <li><code>&lt;beautiful&gt;</code></li>a
+          <li><code>&lt;beautiful&gt;</code></li>
           <li><code>&lt;old&gt;</code></li>
           <li><code>&lt;container&gt;</code></li>
           <li><code>&lt;ghl-s&gt;</code></li>
