--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
         <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>810 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
         <ul style="font-size:20px;">
-          <li><code>&lt;c-r&gt;</code></li>
-          <li><code>&lt;c-g&gt;</code></li>
-          <li><code>&lt;c-b&gt;</code></li>
-          <li><code>&lt;c-o&gt;</code></li>
-          <li><code>&lt;c-y&gt;</code></li>
-          <li><code>&lt;c-i&gt;</code></li>
-          <li><code>&lt;c-v&gt;</code></li>
-          <li><code>&lt;bg-r&gt;</code></li>
-          <li><code>&lt;bg-g&gt;</code></li>
-          <li><code>&lt;bg-b&gt;</code></li>
-          <li><code>&lt;bg-o&gt;</code></li>
-          <li><code>&lt;bg-y&gt;</code></li>
-          <li><code>&lt;bg-i&gt;</code></li>
-          <li><code>&lt;bg-v&gt;</code></li>
+          <li><code>&lt;c-r&gt; <c-r>Red</c-r> </code></li>
+          <li><code>&lt;c-g&gt; <c-g>Green</c-g> </code></li>
+          <li><code>&lt;c-b&gt; <c-b>Blue</c-b> </code></li>
+          <li><code>&lt;c-o&gt; <c-o>Orange</c-o> </code></li>
+          <li><code>&lt;c-y&gt; <c-y>Yellow</c-y> </code></li>
+          <li><code>&lt;c-i&gt; <c-i>Indigo</c-i> </code></li>
+          <li><code>&lt;c-v&gt; <c-v>Violet</c-v> </code></li>
+          <li><code>&lt;bg-r&gt; <bg-r style="color:white;">Background Red</bg-r> </code></li>
+          <li><code>&lt;bg-g&gt; <bg-g style="color:white;">Background Green</bg-g> </code></li>
+          <li><code>&lt;bg-b&gt; <bg-b style="color:white;">Background Blue</bg-b> </code></li>
+          <li><code>&lt;bg-o&gt; <bg-o style="color:white;">Background Orange</bg-o> </code></li>
+          <li><code>&lt;bg-y&gt; <bg-y style="color:white;">Background Yellow</bg-y></code></li>
+          <li><code>&lt;bg-i&gt; <bg-i style="color:white;">Background Indigo</bg-i></code></li>
+          <li><code>&lt;bg-v&gt; <bg-v style="color:white;">Background Violet</bg-v> </code></li>
           <li><code>&lt;awesome&gt;</code></li>
           <li><code>&lt;cool&gt;</code></li>
           <li><code>&lt;nice&gt;</code></li>
