--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><code>&lt;ghl-s&gt;</code></li>
         </ul>
         <div>
-          <h1>Classes For Tags</h1>
+          <h1>Classes</h1>
           <ul>
             <li><code>.sm</code></li>
             <li><code>.med</code></li>
@@ -74,9 +74,9 @@
           <old>old</old><br>
           <container>container</container><br>
           <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a>
-          <div class="sm">.sm</div>
-          <div class="med">.med</div>
-          <div class="bg">.bg</div>
+          <div class="sm">Small (.sm)</div>
+          <div class="med">Medium (.med)</div>
+          <div class="bg">Large (.bg)</div>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
