--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <li><code>&lt;bg-y&gt; <bg-y style="color:white;">Background Yellow</bg-y></code></li>
           <li><code>&lt;bg-i&gt; <bg-i style="color:white;">Background Indigo</bg-i></code></li>
           <li><code>&lt;bg-v&gt; <bg-v style="color:white;">Background Violet</bg-v> </code></li>
-          <li><code>&lt;awesome&gt;</code></li>
-          <li><code>&lt;cool&gt;</code></li>
-          <li><code>&lt;nice&gt;</code></li>
-          <li><code>&lt;insane&gt;</code></li>
-          <li><code>&lt;beautiful&gt;</code></li>
-          <li><code>&lt;old&gt;</code></li>
-          <li><code>&lt;container&gt;</code></li>
-          <li><code>&lt;ghl-s&gt;</code></li>
+          <li><code>&lt;awesome&gt; <awesome>Awesome</awesome></code></li>
+          <li><code>&lt;cool&gt; <cool>Cool</cool></code></li>
+          <li><code>&lt;nice&gt; <nice>Nice</nice></code></li>
+          <li><code>&lt;insane&gt; <insane>Insane</insane></code></li>
+          <li><code>&lt;beautiful&gt; <beautiful>Beautiful</beautiful></code></li>
+          <li><code>&lt;old&gt; <old>Old</old></code></li>
+          <li><code>&lt;container&gt; <container>Container</container></code></li>
+          <li><code>&lt;ghl-s&gt; <ghl-s>Link</ghl-s></code></li>
         </ul>
         <div>
           <h1>Classes</h1>
