--- a/index.html
+++ b/index.html
@@ -44,21 +44,20 @@
           <li><code>&lt;bg-y&gt; <bg-y style="color:white;">Background Yellow</bg-y></code></li>
           <li><code>&lt;bg-i&gt; <bg-i style="color:white;">Background Indigo</bg-i></code></li>
           <li><code>&lt;bg-v&gt; <bg-v style="color:white;">Background Violet</bg-v> </code></li>
-          <li><code>&lt;awesome&gt; <awesome>Awesome</awesome></code></li>
           <li><code>&lt;cool&gt; <cool>Cool</cool></code></li>
           <li><code>&lt;nice&gt; <nice>Nice</nice></code></li>
           <li><code>&lt;insane&gt; <insane>Insane</insane></code></li>
           <li><code>&lt;beautiful&gt; <beautiful>Beautiful</beautiful></code></li>
           <li><code>&lt;old&gt; <old>Old</old></code></li>
           <li><code>&lt;container&gt; <container>Container</container></code></li>
-          <li><code>&lt;ghl-s&gt; <ghl-s>Link</ghl-s></code></li>
+          <li><code>&lt;ghl-s&gt; <a href="https://github.com/talonbragg"><ghl-s>GitHub Link Style</ghl-s></a></code></li>
         </ul>
         <div>
           <h1>Classes</h1>
           <ul>
-            <li><code>.sm</code></li>
-            <li><code>.med</code></li>
-            <li><code>.bg</code></li>
+            <li><code>.sm <span class="sm">Small</span></code></li>
+            <li><code>.med <span class="med">Medium</span></code></li>
+            <li><code>.bg <span class="bg">Large</span></code></li>
           </ul>
         </div>
         <div>
