--- a/index.html
+++ b/index.html
@@ -30,34 +30,35 @@
         <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
         <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>810 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
         <ul style="font-size:20px;">
-          <li><code>&lt;c-r&gt; <c-r>Red</c-r> </code></li>
-          <li><code>&lt;c-g&gt; <c-g>Green</c-g> </code></li>
-          <li><code>&lt;c-b&gt; <c-b>Blue</c-b> </code></li>
-          <li><code>&lt;c-o&gt; <c-o>Orange</c-o> </code></li>
-          <li><code>&lt;c-y&gt; <c-y>Yellow</c-y> </code></li>
-          <li><code>&lt;c-i&gt; <c-i>Indigo</c-i> </code></li>
-          <li><code>&lt;c-v&gt; <c-v>Violet</c-v> </code></li>
-          <li><code>&lt;bg-r&gt; <bg-r style="color:white;">Background Red</bg-r> </code></li>
-          <li><code>&lt;bg-g&gt; <bg-g style="color:white;">Background Green</bg-g> </code></li>
-          <li><code>&lt;bg-b&gt; <bg-b style="color:white;">Background Blue</bg-b> </code></li>
-          <li><code>&lt;bg-o&gt; <bg-o style="color:white;">Background Orange</bg-o> </code></li>
-          <li><code>&lt;bg-y&gt; <bg-y style="color:white;">Background Yellow</bg-y></code></li>
-          <li><code>&lt;bg-i&gt; <bg-i style="color:white;">Background Indigo</bg-i></code></li>
-          <li><code>&lt;bg-v&gt; <bg-v style="color:white;">Background Violet</bg-v> </code></li>
-          <li><code>&lt;cool&gt; <cool>Cool</cool></code></li>
-          <li><code>&lt;nice&gt; <nice>Nice</nice></code></li>
-          <li><code>&lt;insane&gt; <insane>Insane</insane></code></li>
-          <li><code>&lt;beautiful&gt; <beautiful>Beautiful</beautiful></code></li>
-          <li><code>&lt;old&gt; <old>Old</old></code></li>
-          <li><code>&lt;container&gt; <container>Container</container></code></li>
-          <li><code>&lt;ghl-s&gt; <a href="https://github.com/talonbragg"><ghl-s>GitHub Link Style</ghl-s></a></code></li>
+          <li><code>&lt;c-r&gt;</code></li>
+          <li><code>&lt;c-g&gt;</code></li>
+          <li><code>&lt;c-b&gt;</code></li>
+          <li><code>&lt;c-o&gt;</code></li>
+          <li><code>&lt;c-y&gt;</code></li>
+          <li><code>&lt;c-i&gt;</code></li>
+          <li><code>&lt;c-v&gt;</code></li>
+          <li><code>&lt;bg-r&gt;</code></li>
+          <li><code>&lt;bg-g&gt;</code></li>
+          <li><code>&lt;bg-b&gt;</code></li>
+          <li><code>&lt;bg-o&gt;</code></li>
+          <li><code>&lt;bg-y&gt;</code></li>
+          <li><code>&lt;bg-i&gt;</code></li>
+          <li><code>&lt;bg-v&gt;</code></li>
+          <li><code>&lt;awesome&gt;</code></li>
+          <li><code>&lt;cool&gt;</code></li>
+          <li><code>&lt;nice&gt;</code></li>
+          <li><code>&lt;insane&gt;</code></li>
+          <li><code>&lt;beautiful&gt;</code></li>
+          <li><code>&lt;old&gt;</code></li>
+          <li><code>&lt;container&gt;</code></li>
+          <li><code>&lt;ghl-s&gt;</code></li>
         </ul>
         <div>
           <h1>Classes</h1>
           <ul>
-            <li><code>.sm <span class="sm">Small</span></code></li>
-            <li><code>.med <span class="med">Medium</span></code></li>
-            <li><code>.bg <span class="bg">Large</span></code></li>
+            <li><code>.sm</code></li>
+            <li><code>.med</code></li>
+            <li><code>.bg</code></li>
           </ul>
         </div>
         <div>
@@ -73,8 +74,22 @@
           <old>old</old><br>
           <container>container</container><br>
           <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a>
-          <div class="sm">Small (.sm)</div>
-          <div class="med">Medium (.med)</div>
+          <bg-r style="color:white;">Background Red</bg-r><br>
+          <bg-g style="color:white;">Background Green</bg-g><br>
+          <bg-b style="color:white;">Background Blue</bg-b><br>
+          <bg-o style="color:white;">Background Orange</bg-o><br>
+          <bg-y style="color:white;">Background Yellow</bg-y><br>
+          <bg-i style="color:white;">Background Indigo</bg-i><br>
+          <bg-v style="color:white;">Background Violet</bg-v><br>
+          <c-r>Red</c-r><br>
+          <c-g>Green</c-g><br>
+          <c-b>Blue</c-b><br>
+          <c-o>Orange</c-o><br>
+          <c-y>Yellow</c-y><br>
+          <c-i>Indigo</c-i><br>
+          <c-v>Violet</c-v><br>
+          <div class="sm">Small (.sm)</div><br>
+          <div class="med">Medium (.med)</div><br>
           <div class="bg">Large (.bg)</div>
         </div>
       </div>
