--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <beautiful>beautiful</beautiful><br>
           <old>old</old><br>
           <container>container</container><br>
-          <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a>
+          <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a><br>
           <bg-r style="color:white;">Background Red</bg-r><br>
           <bg-g style="color:white;">Background Green</bg-g><br>
           <bg-b style="color:white;">Background Blue</bg-b><br>
