--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           <c-y>Yellow</c-y><br>
           <c-i>Indigo</c-i><br>
           <c-v>Violet</c-v><br>
-          <div class="sm">Text (.sm)</div>
-          <div class="med">Text (.med)</div>
-          <div class="bg">Text (.bg)</div>
+          <div class="sm">Text</div>
+          <div class="med">Text</div>
+          <div class="bg">Text</div>
         </div>
       </div>
     <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
