--- a/index.html
+++ b/index.html
@@ -1,110 +1,139 @@
 <html>
-  <head>
-    <title>Custom Markup</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="A simple HTML framework to make your day easier.">
-    <meta name="keywords" content="custom markup, Custom Markup, Custom, Markup, HTML, framework, html framework">
-    <meta name="author" content="Talon Bragg">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
-    <link rel="stylesheet" type="text/css" href="dist/main.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="smoothscroll.js"></script>
-  </head>
-  <body>
-    <div id="social">
-      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
-    </div>
-    <div class="title">
-      <h1 style="color: white;">Custom Markup</h1>
-      <subheading>An Easier Way To Use HTML</subheading><br><br><br>
-      <a href="#hContent" class="btn">Show Me!</a>
-    </div>
-    <div class="howTo">
-      <div class="hContent" id="hContent">
-        <h2>How To Use</h2>
-        <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
-        <p>Click it to copy it to your clipboard.</p>
-        <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
-        <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p> 
-        <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>810 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
-        <ul style="font-size:20px;">
-          <li><code>&lt;c-r&gt;</code></li>
-          <li><code>&lt;c-g&gt;</code></li>
-          <li><code>&lt;c-b&gt;</code></li>
-          <li><code>&lt;c-o&gt;</code></li>
-          <li><code>&lt;c-y&gt;</code></li>
-          <li><code>&lt;c-i&gt;</code></li>
-          <li><code>&lt;c-v&gt;</code></li>
-          <li><code>&lt;bg-r&gt;</code></li>
-          <li><code>&lt;bg-g&gt;</code></li>
-          <li><code>&lt;bg-b&gt;</code></li>
-          <li><code>&lt;bg-o&gt;</code></li>
-          <li><code>&lt;bg-y&gt;</code></li>
-          <li><code>&lt;bg-i&gt;</code></li>
-          <li><code>&lt;bg-v&gt;</code></li>
-          <li><code>&lt;awesome&gt;</code></li>
-          <li><code>&lt;cool&gt;</code></li>
-          <li><code>&lt;nice&gt;</code></li>
-          <li><code>&lt;insane&gt;</code></li>
-          <li><code>&lt;beautiful&gt;</code></li>
-          <li><code>&lt;old&gt;</code></li>
-          <li><code>&lt;container&gt;</code></li>
-          <li><code>&lt;ghl-s&gt;</code></li>
-        </ul>
-        <div>
-          <h1>Classes</h1>
-          <ul>
-            <li><code>.sm</code></li>
-            <li><code>.med</code></li>
-            <li><code>.bg</code></li>
-          </ul>
-        </div>
-        <div>
-          <h1>Examples</h1>
-          <hr width="50%" height="15px" align="left">
-          <c-r>Hi</c-r><br>
-          <bg-r>Hello</bg-r><br>
-          <awesome>Awesome</awesome><br>
-          <cool>cool</cool><br>
-          <nice>nice</nice><br>
-          <insane>INSANE</insane><br>
-          <beautiful>beautiful</beautiful><br>
-          <old>old</old><br>
-          <container>container</container><br>
-          <a href="https://github.com/talonbragg"><ghl-s>github link style</ghl-s></a><br>
-          <bg-r style="color:white;">Background Red</bg-r><br>
-          <bg-g style="color:white;">Background Green</bg-g><br>
-          <bg-b style="color:white;">Background Blue</bg-b><br>
-          <bg-o style="color:white;">Background Orange</bg-o><br>
-          <bg-y style="color:white;">Background Yellow</bg-y><br>
-          <bg-i style="color:white;">Background Indigo</bg-i><br>
-          <bg-v style="color:white;">Background Violet</bg-v><br>
-          <c-r>Red</c-r><br>
-          <c-g>Green</c-g><br>
-          <c-b>Blue</c-b><br>
-          <c-o>Orange</c-o><br>
-          <c-y>Yellow</c-y><br>
-          <c-i>Indigo</c-i><br>
-          <c-v>Violet</c-v><br>
-          <div class="sm">Text</div>
-          <div class="med">Text</div>
-          <div class="bg">Text</div>
-        </div>
+   <head>
+      <title>Custom Markup</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="A simple HTML framework to make your day easier.">
+      <meta name="keywords" content="custom markup, Custom Markup, Custom, Markup, HTML, framework, html framework">
+      <meta name="author" content="Talon Bragg">
+      <link rel="stylesheet" type="text/css" href="css/main.css">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
+      <link rel="stylesheet" type="text/css" href="dist/main.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="smoothscroll.js"></script>
+   </head>
+   <body>
+      <div id="social">
+         <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
+         <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
       </div>
-    <hr width="50%" height="15px" align="left"><br><br><h1>More Coming Soon!</h1>
-    </div>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-85056275-7', 'auto');
-    ga('send', 'pageview');
-    </script>
-    <script type="text/javascript">$crisp=[];CRISP_WEBSITE_ID="122e6313-140f-4d9e-8f98-55773d7ec705";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="copythat.js"></script>
-  </body>
+      <div class="title">
+         <h1 style="color: white;">Custom Markup</h1>
+         <subheading>An Easier Way To Use HTML</subheading>
+         <br><br><br>
+         <a href="#hContent" class="btn">Show Me!</a>
+      </div>
+      <div class="howTo">
+         <div class="hContent" id="hContent">
+            <h2>How To Use</h2>
+            <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
+            <p>Click it to copy it to your clipboard.</p>
+            <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
+            <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p>
+            <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>810 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
+            <ul style="font-size:20px;">
+               <li><code>&lt;c-r&gt;</code></li>
+               <li><code>&lt;c-g&gt;</code></li>
+               <li><code>&lt;c-b&gt;</code></li>
+               <li><code>&lt;c-o&gt;</code></li>
+               <li><code>&lt;c-y&gt;</code></li>
+               <li><code>&lt;c-i&gt;</code></li>
+               <li><code>&lt;c-v&gt;</code></li>
+               <li><code>&lt;bg-r&gt;</code></li>
+               <li><code>&lt;bg-g&gt;</code></li>
+               <li><code>&lt;bg-b&gt;</code></li>
+               <li><code>&lt;bg-o&gt;</code></li>
+               <li><code>&lt;bg-y&gt;</code></li>
+               <li><code>&lt;bg-i&gt;</code></li>
+               <li><code>&lt;bg-v&gt;</code></li>
+               <li><code>&lt;awesome&gt;</code></li>
+               <li><code>&lt;cool&gt;</code></li>
+               <li><code>&lt;nice&gt;</code></li>
+               <li><code>&lt;insane&gt;</code></li>
+               <li><code>&lt;beautiful&gt;</code></li>
+               <li><code>&lt;old&gt;</code></li>
+               <li><code>&lt;container&gt;</code></li>
+               <li><code>&lt;ghl-s&gt;</code></li>
+            </ul>
+            <div>
+               <h1>Classes</h1>
+               <ul>
+                  <li><code>.sm</code></li>
+                  <li><code>.med</code></li>
+                  <li><code>.bg</code></li>
+               </ul>
+            </div>
+            <div>
+               <h1>Examples</h1>
+               <hr width="50%" height="15px" align="left">
+               <c-r>Hi</c-r>
+               <br>
+               <bg-r>Hello</bg-r>
+               <br>
+               <awesome>Awesome</awesome>
+               <br>
+               <cool>cool</cool>
+               <br>
+               <nice>nice</nice>
+               <br>
+               <insane>INSANE</insane>
+               <br>
+               <beautiful>beautiful</beautiful>
+               <br>
+               <old>old</old>
+               <br>
+               <container>container</container>
+               <br>
+               <a href="https://github.com/talonbragg">
+                  <ghl-s>github link style</ghl-s>
+               </a>
+               <br>
+               <bg-r style="color:white;">Background Red</bg-r>
+               <br>
+               <bg-g style="color:white;">Background Green</bg-g>
+               <br>
+               <bg-b style="color:white;">Background Blue</bg-b>
+               <br>
+               <bg-o style="color:white;">Background Orange</bg-o>
+               <br>
+               <bg-y style="color:white;">Background Yellow</bg-y>
+               <br>
+               <bg-i style="color:white;">Background Indigo</bg-i>
+               <br>
+               <bg-v style="color:white;">Background Violet</bg-v>
+               <br>
+               <c-r>Red</c-r>
+               <br>
+               <c-g>Green</c-g>
+               <br>
+               <c-b>Blue</c-b>
+               <br>
+               <c-o>Orange</c-o>
+               <br>
+               <c-y>Yellow</c-y>
+               <br>
+               <c-i>Indigo</c-i>
+               <br>
+               <c-v>Violet</c-v>
+               <br>
+               <div class="sm">Text</div>
+               <div class="med">Text</div>
+               <div class="bg">Text</div>
+            </div>
+         </div>
+         <hr width="50%" height="15px" align="left">
+         <br><br>
+         <h1>More Coming Soon!</h1>
+      </div>
+      <script>
+         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+         ga('create', 'UA-85056275-7', 'auto');
+         ga('send', 'pageview');
+      </script>
+      <script type="text/javascript">$crisp=[];CRISP_WEBSITE_ID="122e6313-140f-4d9e-8f98-55773d7ec705";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+      <script async defer src="https://buttons.github.io/buttons.js"></script>
+      <script src="copythat.js"></script>
+   </body>
 </html>
