--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <title>404 - You are lost</title>
+    <title>404</title>
   </head>
   <body style="font-family:Inconsolata;color:#f5f5f5;background-color:black;text-align:Center;">
-    <h1 style="font-size:80px;">How did you find this!?</h1>
-    <h2 style="font-size:50px;">Click the Compass To Find Your Way Home</h2>
+    <h1 style="font-size:80px;">Um, Ur Lost</h1>
+    <h2 style="font-size:50px;">Click the Compass To Find Your Way Home!</h2>
     <a href="http://custommarkup.ml">
       <img src="https://custommarkup.ml/css/assets/Compass-redpass-art-clipart-image.gif">
     </a>
