--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                <li><code>&lt;beautiful&gt;</code></li>
                <li><code>&lt;old&gt;</code></li>
                <li><code>&lt;container&gt;</code></li>
+               <li><code>&lt;cursive&gt;</code></li>
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
@@ -80,6 +81,7 @@
                <br>
                <container>container</container>
                <br>
+               <cursive>cursive</cursive>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
                </a>
