--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" type="text/css" href="css/main.css">
       <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
       <link rel="stylesheet" type="text/css" href="dist/main.min.css">
+      <link rel="icon" href="https://custommarkup.ml/css/assets/Custom%20Markup%20Logo.png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="smoothscroll.js"></script>
    </head>
