--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
          <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
          <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
       </div>
-      <div class="title">
+      <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
          <subheading>An Easier Way To Use HTML</subheading>
          <br><br><br>
          <a href="#hContent" class="btn">Show Me!</a>
-      </div>
+      </header>
       <div class="howTo">
          <div class="hContent" id="hContent">
             <h2>How To Use</h2>
