--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
             <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p>
             <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>846 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
-            <h3>Download</h3>
+            <h3 style="texrt-decoration:underline;">Download</h3>
             <a href="https://custommarkup.ml/dist/main.min.css" download>Download File</a>
             <hr width="50%" height="15px" align="left">
             <ul style="font-size:20px;">
