--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       <script src="smoothscroll.js"></script>
    </head>
    <body>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+         google_ad_client: "ca-pub-5702559202638755",
+         enable_page_level_ads: true
+         });
+      </script>
       <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
          <subheading>An Easier Way To Use HTML</subheading>
