--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" type="text/css" href="dist/main.min.css">
       <link rel="icon" href="https://custommarkup.ml/css/assets/Custom%20Markup%20Logo.png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <link rel="manifest" href="manifest.webmanifest">
       <script src="smoothscroll.js"></script>
    </head>
    <body>
