--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                <li><code>&lt;old&gt;</code></li>
                <li><code>&lt;container&gt;</code></li>
                <li><code>&lt;cursive&gt;</code></li>
+               <li><c-r>New! </c-r><code>&lt;8-bit&gt;</code></li>
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
