Added example for 8-bit

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                <br>
                <container>container</container>
                <br>
+               <8-bit>8-bit</8-bit>
+               <br>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
                </a>
