Fixed 8-bit tag

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                <li><code>&lt;old&gt;</code></li>
                <li><code>&lt;container&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;cursive&gt;</code></li>
-               <li><c-r>New! </c-r><code>&lt;8-bit&gt;</code></li>
+               <li><c-r>New! </c-r><code>&lt;eight-bit&gt;</code></li>
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
@@ -92,7 +92,7 @@
                <br>
                <container>container</container>
                <br>
-               <8-bit>8-bit</8-bit>
+               <eight-bit>eight-bit</eight-bit>
                <br>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
