--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                <li><code>&lt;container&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;cursive&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;eight-bit&gt;</code></li>
+               <li><c-r>New! </c-r><code>&lt;silhouette&gt;</code></li>
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
@@ -93,6 +94,8 @@
                <container>container</container>
                <br>
                <eight-bit>eight-bit</eight-bit>
+               <br>
+               <silhouette></silhouette>
                <br>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
