--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                <br>
                <eight-bit>eight-bit</eight-bit>
                <br>
-               <silhouette></silhouette>
+               <silhouette>Silhouette</silhouette>
                <br>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
