--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                <li><c-r>New! </c-r><code>&lt;cursive&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;eight-bit&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;silhouette&gt;</code></li>
+               <li><c-r>New! </c-r><code>&lt;rainbow&gt;</code></li>
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
@@ -96,6 +97,8 @@
                <eight-bit>eight-bit</eight-bit>
                <br>
                <silhouette>Silhouette</silhouette>
+               <br>
+               <rainbow>Rainbow</rainbow>
                <br>
                <a href="https://github.com/talonbragg">
                   <ghl-s>github link style</ghl-s>
