--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                <li><code>&lt;beautiful&gt;</code></li>
                <li><code>&lt;old&gt;</code></li>
                <li><code>&lt;container&gt;</code></li>
-               <li><c-r>New! </c-r><code>&lt;cursive&gt;</code></li>
+               <li><code>&lt;cursive&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;eight-bit&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;silhouette&gt;</code></li>
                <li><c-r>New! </c-r><code>&lt;rainbow&gt;</code></li>
