--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
          </div>
          <hr width="50%" height="15px" align="left">
          <br><br>
-         <h3>More Coming Soon!</h3>
+         <h3 align="center">More Coming Soon!</h3>
       </div>
       <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
