--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Custom Markup</title>
+      <title>Custom Markup | A simple HTML framework</title>
       <meta charset="UTF-8">
       <meta name="description" content="A simple HTML framework to make your day easier.">
       <meta name="keywords" content="custom markup, Custom Markup, Custom, Markup, HTML, framework, html framework">
@@ -136,7 +136,7 @@
                <div class="bg">Text</div>
             </div>
          </div>
-         <hr width="50%" height="15px" align="left">
+         <hr width="100%" height="15px" align="left">
          <br><br>
          <h3 align="center">More Coming Soon!</h3>
       </div>
