--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
          <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
-         <subheading>An Easier Way To Use HTML</subheading>
+            <subheading><rainbow>An Easier Way To Use HTML</rainbow></subheading>
          <br><br><br>
          <a href="#hContent" class="btn">Show Me!</a>
       </header>
