--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="css/main.css">
       <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
       <link rel="stylesheet" type="text/css" href="dist/cm.min.css">
-      <link rel="icon" href="https://custommarkup.ml/css/assets/Custom%20Markup%20Logo.png">
+      <link rel="icon" href="https://custommarkup.ml/img/cm.png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <link rel="manifest" href="manifest.webmanifest">
       <script src="smoothscroll.js"></script>
