--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <h1 style="font-size:80px;">Um, Ur Lost</h1>
     <h2 style="font-size:50px;"><rainbow>Click the Compass To Find Your Way Home!</rainbow></h2>
     <a href="http://custommarkup.ml">
-      <img src="https://custommarkup.ml/css/assets/Compass-redpass-art-clipart-image.gif">
+      <img src="https://custommarkup.ml/img/compass.gif">
     </a>
   </body>
 </html>
