--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
          <hr width="100%" height="15px" align="left">
          <br><br>
          <h3 align="center">More Coming Soon!</h3>
+         <p align="center">View on 
+            <a href="https://github.com/talonbragg/custom-markup">
+               <img src="img/github.svg">
+            </a>
+         </p>
       </div>
       <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
