--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
          <h3 align="center">More Coming Soon!</h3>
          <p align="center">View on 
             <a href="https://github.com/talonbragg/custom-markup">
-               <img src="img/github.svg" height="50" width="50" style="background-color: white;">
+               <img src="img/github.svg" height="50" width="50" class="gitimg">
             </a>
          </p>
       </div>
