--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
          <hr width="100%" height="15px" align="left">
          <br><br>
          <h3 align="center">More Coming Soon!</h3>
-         <p align="center">View on 
+         <p align="center"><span class="git-text">View on</span> 
             <a href="https://github.com/talonbragg/custom-markup">
                <img src="img/github.svg" height="50" width="50" class="gitimg">
             </a>
