--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <h3><u>Direct Link</u></h3>
             <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
             <p><b>Hint: </b>Click the code to copy it to your clipboard.</p>
-            <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/main.min.css"&gt;</code>
+            <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/cm.min.css"&gt;</code>
             <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p>
             <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. You can even use it with a css framework by putting classes in the custom made tags. This is only <b>942 bytes</b> minified. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom left corner.</p>
             <h3 style="text-decoration:underline;">Download</h3>
-            <a href="https://custommarkup.ml/dist/main.min.css" download>Download File</a>
+            <a href="https://custommarkup.ml/dist/cm.min.css" download>Download File</a>
             <hr width="50%" height="15px" align="left">
             <ul style="font-size:20px;">
                <li><code>&lt;c-r&gt;</code></li>
