--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
          <hr width="100%" height="15px" align="left">
          <br><br>
          <h3 align="center">More Coming Soon!</h3>
-         <p align="center"><span class="git-text">View on</span> 
-            <a href="https://github.com/talonbragg/custom-markup">
-               <img src="img/github.svg" height="50" width="50" class="gitimg">
-            </a>
-         </p>
+         <div class="bottom">
+            <!-- Place this tag where you want the button to render. -->
+            <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow @talonbragg</a>
+            <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/PenetratingShot" data-style="mega" data-count-href="/PenetratingShot/followers" data-count-api="/users/PenetratingShot#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PenetratingShot on GitHub">Follow @PenetratingShot</a>
+         </div>
       </div>
       <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
