--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
          <hr width="100%" height="15px" align="left">
          <br><br>
          <div class="bottom">
-            <h3 align="center">More Coming Soon!</h3>
+            <h3>More Coming Soon!</h3>
             <!-- Place this tag where you want the button to render. -->
             <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow @talonbragg</a>
             <!-- Place this tag where you want the button to render. -->
