--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@
          <hr width="100%" height="15px" align="left">
          <br><br>
          <div class="bottom">
-            <h3>More Coming Soon!</h3>
+            <span class="MCS"><h3>More Coming Soon!</h3></span>
+            <span>
             <!-- Place this tag where you want the button to render. -->
             <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow @talonbragg</a>
             <!-- Place this tag where you want the button to render. -->
             <a class="github-button" href="https://github.com/PenetratingShot" data-style="mega" data-count-href="/PenetratingShot/followers" data-count-api="/users/PenetratingShot#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PenetratingShot on GitHub">Follow @PenetratingShot</a>
+            </span>
          </div>
       </div>
       <script>
