--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/cm.min.css"&gt;</code>
             <p>Just experiment by using the tags in the list below. Just put in text as a child in the tag.</p>
             <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. This is BETTER than a CSS framework because you can use your own tags with it instead of using the tags in the CSS framework. This is only <b>715 bytes</b> minified and compressed. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom right corner.</p>
-            <h3 style="text-decoration:underline;">Download</h3>
+            <h3>Download</h3>
             <a href="https://custommarkup.ml/dist/cm.zip" download>Download File</a>
             <hr width="50%" height="15px" align="left">
             <ul style="font-size:20px;">
